fixed comment pagination alignment

--- a/rtl.css
+++ b/rtl.css
@@ -1704,6 +1704,7 @@ a img {
   .comment-pagination p {
     display: inline-block;
     width: 50%;
+    margin-left: -4px;
   }
   .comment-pagination .next-comment {
     text-align: left;
