--- a/sass/_comments.scss
+++ b/sass/_comments.scss
@@ -105,6 +105,7 @@
     p {
       display: inline-block;
       width: 50%;
+      margin-right: -4px;
     }
     .next-comment {
       text-align: right;
