--- a/style.css
+++ b/style.css
@@ -1704,6 +1704,7 @@ a img {
   .comment-pagination p {
     display: inline-block;
     width: 50%;
+    margin-right: -4px;
   }
   .comment-pagination .next-comment {
     text-align: right;
